--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Prep</title>
   </head>
   <body>
-    <main></main>
+    <main>
+      <header class="header">
+        <img
+          class="header-hamburger"
+          src="./assets/hamburger.svg"
+          alt="menu icon"
+        />
+        <img
+          class="header-user-icon"
+          src="./assets/user-icon.svg"
+          alt="user-icon"
+        />
+      </header>
+    </main>
   </body>
 </html>
