--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./index.css" />
     <title>Prep</title>
@@ -22,6 +28,22 @@
           alt="user-icon"
         />
       </header>
+      <section class="profile-container">
+        <div class="profile">
+          <div class="profile-img-container">
+            <img
+              class="profile-img"
+              src="./assets/carrot.png"
+              alt="carrot icon"
+            />
+          </div>
+          <div class="profile-name-container">
+            <h1 class="profile-name">Cassie Karrer</h1>
+            <h2 class="profile-username">@chefcassie</h2>
+          </div>
+        </div>
+        <div class="form"></div>
+      </section>
     </main>
   </body>
 </html>
