--- a/index.html
+++ b/index.html
@@ -42,7 +42,18 @@
             <h2 class="profile-username">@chefcassie</h2>
           </div>
         </div>
-        <div class="form"></div>
+        <form class="form">
+          <label for="name">Name</label>
+          <input type="text" id="name" value="Cassie Karrer" />
+          <label for="company">Company</label>
+          <input type="text" id="company" value="Cassie's Food" />
+          <label for="username">Username</label>
+          <input type="text" id="username" value="chefcassie" />
+          <label for="email">Email</label>
+          <input type="text" id="email" value="cassie@goodfood.com" />
+          <label for="password">Password</label>
+          <input type="text" id="password" value="***************" />
+        </form>
       </section>
     </main>
   </body>
