:sparkles: new buttons

--- a/index.html
+++ b/index.html
@@ -54,6 +54,22 @@
           <label for="password">Password</label>
           <input type="text" id="password" value="***************" />
         </form>
+        <div class="profile-buttons">
+          <button class="button update-button">
+            Update<img
+              class="refresh-icon"
+              src="./assets/update-icon.svg"
+              alt="refresh icon"
+            />
+          </button>
+          <button class="button log-out-button">
+            Log Out<img
+              class="log-out-icon"
+              src="./assets/log-out-icon.svg"
+              alt="log out icon"
+            />
+          </button>
+        </div>
       </section>
     </main>
   </body>
