:lipstick: buttons and input

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         </div>
         <form class="form">
           <label for="name">Name</label>
-          <input type="text" id="name" value="Cassie Karrer" />
+          <input type="text" id="name" placeholder="First Last" />
           <label for="company">Company</label>
-          <input type="text" id="company" value="Cassie's Food" />
+          <input type="text" id="company" placeholder="Company Name" />
           <label for="username">Username</label>
-          <input type="text" id="username" value="chefcassie" />
+          <input type="text" id="username" placeholder="yourusername" />
           <label for="email">Email</label>
-          <input type="text" id="email" value="cassie@goodfood.com" />
+          <input type="text" id="email" placeholder="email@email.com" />
           <label for="password">Password</label>
-          <input type="text" id="password" value="***************" />
+          <input type="text" id="password" placeholder="*******************" />
         </form>
         <div class="profile-buttons">
           <button class="button update-button">
